--- a/examples/index.html
+++ b/examples/index.html
@@ -18,9 +18,6 @@
 <!--
 window.onload = function(){
 	(function(){
-		var div_id = "table1";
-		/* prepare dataset */
-
 		var cond = {
 			row_cnt: 35,
 			random_ceil: 20000,
@@ -30,19 +27,46 @@ window.onload = function(){
 				{name:"piyo", data_func: ctd3t.sequence_str},
 			]
 		};
-		for(var i=0;i<35;i++){
-			if(i%2 == 1){
+		for(var i=0;i<20;i++){
+			if(i%3 == 1){
 				cond.cols.push({name:"col"+i, data_func:ctd3t.random_int})
-			}else{
+			}else if(i%3 == 2){
 				cond.cols.push({name:"col"+i, data_func:ctd3t.random_str})
+			}else{
+				cond.cols.push({name:"col"+i, data_func:ctd3t.repeat_weekday})
 			}
 		}
 		var data = (new ctd3t.DatasetGenerator(cond)).generate();
+		data[0].col2 = "hogehogehogehoge<br/>piyopi";
+		data[1].col2 = "<a href='./index.html'>http://g0e.net/dev/ctd3_js/hoge/hoge/piyo/piyo/piyo/</a>";
 		
-		var t = new ctd3.Table(div_id,data);
+		var t = new ctd3.Table("table1",data);
 		
-		/* render chart */
+		var meta = {
+			hoge: { order:2, label:"ほげ", width: 50 },
+			piyo: { order:1, label:"ぴよ" },
+			col1: { order:3, width: 100, text_format: d3.format("%") },
+			col4: { order:-1 },
+			col3: { filter_type:"select" },
+		};
+		t.setup_meta(meta);
+
+		var options = {
+			view_row_cursor: 0,
+			view_col_cursor: 0,
+			view_row_size: 10,
+			view_col_size: 7,
+			view_fix_col_size: 2,
+			show_filter_form: true
+		};
+		t.setup_dm_options(options);
+		t.dm.enable_incell_visualize("col1");
+		t.dm.enable_incell_visualize("col4","gradation");
 		t.render();
+		
+		var t2 = new ctd3.Table("table2",data);
+		//t2.setup_meta(meta);
+		t2.render();
 		
 	})();
 };
@@ -50,12 +74,15 @@ window.onload = function(){
 		</script>
 	</head>
 	<body>
-		<h1>ccd3 sample charts</h1>
+		<h1>ctd3 sample charts</h1>
 		<ul>
 			<li><a href="./hoge.html">hoge example</a></li>
 		</ul>
 		<div id="tables">
 			<div id="table1" style="width:100%;">
+			</div>
+			<p>hogehoge</p>
+			<div id="table2" style="width:100%;">
 			</div>
 		</div>
 	</body>
