--- a/examples/basic.html
+++ b/examples/basic.html
@@ -32,7 +32,7 @@ window.onload = function(){
 		};
 		t.setup_meta(meta);
 		var options = {
-			caption: "customized table",
+			caption: "visualize cells",
 		};
 		t.setup_options(options);
 		t.render();
@@ -44,9 +44,7 @@ window.onload = function(){
 	<body>
 		<h1>ctd3 sample tables</h1>
 		<ul>
-			<li><a href="./basic.html">basic table</a></li>
-			<li><a href="./big_table.html">big table</a></li>
-			<li><a href="./ajax_load.html">ajax load</a></li>
+			<li><a href="./index.html">back to index</a></li>
 		</ul>
 		<div id="tables">
 		</div>
