--- a/examples/ajax_load.html
+++ b/examples/ajax_load.html
@@ -14,15 +14,10 @@ window.onload = function(){
 	(function(){
 		var div_id = "table1";
 		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
-		var t = new ctd3.Table(div_id,dataset.fruit);
-		t.render();
-	})();
-	(function(){
-		var div_id = "table2";
-		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
-		var t = new ctd3.Table(div_id,dataset.fruit);
+		var t = new ctd3.Table(div_id);
 		var meta = {
 			price:{ visualize:"bar" },
+			name:{label:"fruit name"},
 			profit:{ 
 				text_format: d3.format("%"),
 				visualize:"gradation", visualize_high_color:"green", visualize_low_color:"white" 
@@ -30,25 +25,48 @@ window.onload = function(){
 			stock:{ visualize:"bar",visualize_bar_color:"orange" },
 			color:{ filter_type:"select" },
 		};
-		t.setup_meta(meta);
+		t.loader.onload_meta = meta;
 		var options = {
-			caption: "customized table",
+			caption: "static ajax test",
 		};
-		t.setup_options(options);
-		t.render();
+		t.loader.onload_options = options;
+		t.loader.base_url = "./../data_source/static/fruit.json";
+		t.loader.xhr_load();
+	})();
+	(function(){
+		var div_id = "table2";
+		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
+		var t = new ctd3.Table(div_id);
+		var meta = {
+			random_int:{ width:200, visualize:"bar", visualize_bar_color:"orange" },
+			random_str:{ width:200 },
+		};
+		t.loader.onload_meta = meta;
+		var options = {
+			caption: "ajax test",
+		};
+		t.loader.onload_options = options;
+		t.loader.base_url = "./../data_source/sample_json.py";
+		t.loader.xhr_load();
 	})();
 };
+
+function xhr_reload(){
+	ctd3.instances["table2"].loader.xhr_load({offset:10});
+}
+
 -->
 		</script>
 	</head>
 	<body>
 		<h1>ctd3 sample tables</h1>
 		<ul>
-			<li><a href="./basic.html">basic table</a></li>
-			<li><a href="./big_table.html">big table</a></li>
-			<li><a href="./ajax_load.html">ajax load</a></li>
+			<li><a href="./index.html">back to index</a></li>
 		</ul>
 		<div id="tables">
+		</div>
+		<div>
+			<input type="button" value="reload" onclick="xhr_reload()"/>
 		</div>
 	</body>
 </html>
