--- a/examples/checklist.html
+++ b/examples/checklist.html
@@ -10,23 +10,31 @@
 		<script type="text/javascript" src="./dataset.json"></script>
 		<script type="text/javascript">
 <!--
+var t=null;
 window.onload = function(){
-	(function(){
-		var div_id = "table1";
-		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
-		var t = new ctd3.Table(div_id,dataset.fruit);
-		t.render();
-	})();
 	(function(){
 		var div_id = "table2";
 		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
-		var t = new ctd3.Table(div_id,dataset.fruit);
+		var ds = dataset.fruit;
+		for(var i=0;i<ds.length;i++){
+			ds[i].check = false;
+		}
+		t = new ctd3.Table(div_id,ds);
 		var onclick_func = function(m,d,i){
 			d3.select(this).on("click",function(){
 				console.log(d);
 			});
 		}
+		var create_check = function(v){
+			return "<input type='checkbox' name='hoge'"+(v?"checked":"")+"></input>";
+		}
+		var save_check = function(m,d){
+			d3.select(this).select("input").on("change",function(){
+				d3.select(this.parentNode.parentNode).datum().check = d3.select(this).property("checked");
+			});
+		}
 		var meta = {
+			check:{ label:"checklist", html_format:create_check, js_format:save_check },
 			price:{ label:"<i>PrIce</i>", visualize:"bar", width2:"100px", js_format:onclick_func },
 			profit:{ 
 				text_format: d3.format("%"),
@@ -50,12 +58,6 @@ window.onload = function(){
 	</head>
 	<body>
 		<h1>ctd3 sample tables</h1>
-		<ul>
-			<li><a href="./basic.html">basic table</a></li>
-			<li><a href="./big_table.html">big table</a></li>
-			<li><a href="./ajax_load.html">ajax load</a></li>
-			<li><a href="./checklist.html">check list</a></li>
-		</ul>
 		<div id="tables" style="width:90%;">
 		</div>
 	</body>
