--- a/examples/filter.html
+++ b/examples/filter.html
@@ -15,31 +15,15 @@ window.onload = function(){
 		var div_id = "table1";
 		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
 		var t = new ctd3.Table(div_id,dataset.fruit);
-		t.render();
-	})();
-	(function(){
-		var div_id = "table2";
-		d3.select("#tables").append("div").attr("id",div_id).style("margin","20px");
-		var t = new ctd3.Table(div_id,dataset.fruit);
-		var onclick_func = function(m,d,i){
-			d3.select(this).on("click",function(){
-				console.log(d);
-			});
-		}
 		var meta = {
-			price:{ label:"<i>PrIce</i>", visualize:"bar", width2:"100px", js_format:onclick_func },
-			profit:{ 
-				text_format: d3.format("%"),
-				visualize:"gradation", visualize_high_color:"green", visualize_low_color:"white",
-				width2: "200px",
-			},
-			stock:{ visualize:"bar",visualize_bar_color:"orange",width2: 2.0 },
+			price:{ },
+			profit:{ },
+			stock:{ filter_func:function(d){ return ""+d+" "+d3.format(",")(d); } },
 			color:{ filter_type:"select" },
 		};
 		t.setup_meta(meta);
 		var options = {
-			caption: "customized table",
-			auto_resize: true,
+			caption: "visualize cells",
 		};
 		t.setup_options(options);
 		t.render();
@@ -51,13 +35,9 @@ window.onload = function(){
 	<body>
 		<h1>ctd3 sample tables</h1>
 		<ul>
-			<li><a href="./basic.html">basic table</a></li>
-			<li><a href="./big_table.html">big table</a></li>
-			<li><a href="./ajax_load.html">ajax load</a></li>
-			<li><a href="./checklist.html">check list</a></li>
-			<li><a href="./filter.html">filter</a></li>
+			<li><a href="./index.html">back to index</a></li>
 		</ul>
-		<div id="tables" style="width:90%;">
+		<div id="tables">
 		</div>
 	</body>
 </html>
