--- a/examples/index.html
+++ b/examples/index.html
@@ -3,10 +3,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=8;IE=9"/>
 		<title>Test ctd3</title>
-		<link rel="stylesheet" href="./../ctd3.css" type="text/css" />
+		<link rel="stylesheet" href="./../dist/ctd3.css" type="text/css" />
 		<script type="text/javascript" src="./../vendor/d3.v3/d3.v3.js"></script>
-		<script type="text/javascript" src="./../ctd3.js"></script>
-		<script type="text/javascript" src="./../dataset_sample.js"></script>
+		<script type="text/javascript" src="./../dist/ctd3.js"></script>
+		<script type="text/javascript" src="./../dist/dataset_sample.js"></script>
 		<script type="text/javascript" src="./dataset.json"></script>
 		<script type="text/javascript">
 <!--
